--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<div class="body-wrapper">
-  <div class="container-fluid" style="margin-top: 15px">
+<div class="body-container">
+  <div class="container-fluid" >
     <div class="card1">
       <div class="card-body">
         <div class="row">
@@ -71,89 +71,8 @@
           </div>
         </div>
       </div>
-      <h2 class="heading">Products in Stock</h2>
-      <div class="row mt-30">
-        <div class="col-sm-6 col-xl-3">
-          <div class="card overflow-hidden rounded-2">
-            <div class="position-relative">
-              <a
-                ><img
-                  src="https://img.freepik.com/free-photo/basket-with-back-school-essentials_23-2148587237.jpg?t=st=1713649770~exp=1713653370~hmac=90fe7742749bb3bcc4fb0ba0a78d1932b95a1e5a7c7aea1e5bb92c1025fe4d2f&w=826"
-                  class="card-img-top rounded-0"
-                  alt="..."
-              /></a>
-              
-            </div>
-            <div class="card-body pt-3 p-4">
-              <h6 class="fw-semibold fs-4">Stationary Product Title</h6>
-              <div class="d-flex align-items-center justify-content-between">
-                <h6 class="fw-semibold fs-4 mb-0">Stationary Price ($00.00)</h6>
-              </div>
-              <p>Description</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="card overflow-hidden rounded-2">
-            <div class="position-relative">
-              <a
-                ><img
-                  src="https://img.freepik.com/free-photo/basket-with-back-school-essentials_23-2148587237.jpg?t=st=1713649770~exp=1713653370~hmac=90fe7742749bb3bcc4fb0ba0a78d1932b95a1e5a7c7aea1e5bb92c1025fe4d2f&w=826"
-                  class="card-img-top rounded-0"
-                  alt="..."
-              /></a>
-              
-            </div>
-            <div class="card-body pt-3 p-4">
-              <h6 class="fw-semibold fs-4">Stationary Product Title</h6>
-              <div class="d-flex align-items-center justify-content-between">
-                <h6 class="fw-semibold fs-4 mb-0">Stationary Price ($00.00)</h6>
-              </div>
-              <p>Description</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="card overflow-hidden rounded-2">
-            <div class="position-relative">
-              <a
-                ><img
-                  src="https://img.freepik.com/free-photo/basket-with-back-school-essentials_23-2148587237.jpg?t=st=1713649770~exp=1713653370~hmac=90fe7742749bb3bcc4fb0ba0a78d1932b95a1e5a7c7aea1e5bb92c1025fe4d2f&w=826"
-                  class="card-img-top rounded-0"
-                  alt="..."
-              /></a>
-             
-            </div>
-            <div class="card-body pt-3 p-4">
-              <h6 class="fw-semibold fs-4">Stationary Product Title</h6>
-              <div class="d-flex align-items-center justify-content-between">
-                <h6 class="fw-semibold fs-4 mb-0">Stationary Price ($00.00)</h6>
-              </div>
-              <p>Description</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xl-3">
-          <div class="card overflow-hidden rounded-2">
-            <div class="position-relative">
-              <a
-                ><img
-                  src="https://img.freepik.com/free-photo/basket-with-back-school-essentials_23-2148587237.jpg?t=st=1713649770~exp=1713653370~hmac=90fe7742749bb3bcc4fb0ba0a78d1932b95a1e5a7c7aea1e5bb92c1025fe4d2f&w=826"
-                  class="card-img-top rounded-0"
-                  alt="..."
-              /></a>
-              
-            </div>
-            <div class="card-body pt-3 p-4">
-              <h6 class="fw-semibold fs-4">Stationary Product Title</h6>
-              <div class="d-flex align-items-center justify-content-between">
-                <h6 class="fw-semibold fs-4 mb-0">Stationary Price ($00.00)</h6>
-              </div>
-              <p>Description</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
+  
+
