--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -59,6 +59,12 @@
                     >Create an account</a
                   >
                 </div>
+                <div class="d-flex lign-items-center justify-content-center">
+                  <a class="text-primary fw-bold ms-2" routerLink="/home"
+                  >Back to Shop</a
+                >
+                </div>
+                
               </form>
             </div>
           </div>
