--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -69,6 +69,11 @@
                     >Sign In</a
                   >
                 </div>
+                <div class="d-flex lign-items-center justify-content-center">
+                  <a class="text-primary fw-bold ms-2" routerLink="/home"
+                  >Back to Shop</a
+                >
+                </div>
               </form>
             </div>
           </div>
