--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="body-wrapper">
+<div class="body-container">
   <div class="container-fluid" style="margin-top: 5%">
     <div class="row">
       <div class="col-lg-12 d-flex align-items-stretch">
@@ -19,6 +19,9 @@
                       <h6 class="fw-semibold mb-0">Description</h6>
                     </th>
                     <th class="border-bottom-0">
+                      <h6 class="fw-semibold mb-0">Quantity</h6>
+                    </th>
+                    <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0">Stock Level</h6>
                     </th>
                     <th class="border-bottom-0">
@@ -27,28 +30,39 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <tr *ngFor="let product of products">
                     <td class="border-bottom-0">
-                      <h6 class="fw-semibold mb-0">PD001</h6>
+                      <h6 class="fw-semibold mb-0">{{ product.productId }}</h6>
                     </td>
                     <td class="border-bottom-0">
-                      <span class="fw-normal">Pencils</span>
+                      <span class="fw-normal">{{ product.productName }}</span>
                     </td>
                     <td class="border-bottom-0">
-                      <p class="mb-0 fw-normal">Elite Admin</p>
+                      <p class="mb-0 fw-normal">{{ product.description }}</p>
+                    </td>
+                    <td class="border-bottom-0">
+                      <p class="mb-0 fw-normal">{{ product.quantity }}</p>
                     </td>
                     <td class="border-bottom-0">
                       <div class="d-flex align-items-center gap-2">
-                        <span class="badge bg-primary rounded-3 fw-semibold"
-                          >Low</span
+                        <span
+                          [ngClass]="{
+                            'badge bg-success fw-semibold rounded-3':
+                              product.stockLevel === 'High',
+                            'badge bg-warning fw-semibold rounded-3':
+                              product.stockLevel === 'Medium',
+                            'badge bg-danger fw-semibold rounded-3':
+                              product.stockLevel === 'Low'
+                          }"
+                          >{{ product.stockLevel }}</span
                         >
                       </div>
                     </td>
+
                     <td class="border-bottom-0">
-                      <h6 class="fw-semibold mb-0 fs-4">$3.90</h6>
+                      <h6 class="fw-semibold mb-0 fs-4">{{ product.price }}</h6>
                     </td>
                   </tr>
-                  
                 </tbody>
               </table>
             </div>
