--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -76,6 +76,19 @@
               <span class="hide-menu">Add Product</span>
             </a>
           </li>
+          <li class="sidebar-item">
+            <a
+              class="sidebar-link"
+              routerLink="set-price"
+              aria-expanded="false"
+              routerLinkActive="active"
+            >
+              <span>
+                <i class="lni lni-credit-cards"></i>
+              </span>
+              <span class="hide-menu">Set Prices</span>
+            </a>
+          </li>
           <li class="nav-small-cap">
             <i class="lni lni-grid-alt nav-small-cap-icon fs-4"></i>
             <span class="hide-menu">Products Analysis</span>
@@ -123,19 +136,65 @@
               <span class="hide-menu">Sales Report</span>
             </a>
           </li>
-          <!-- <li class="sidebar-item">
+          <li class="sidebar-item">
             <a
               class="sidebar-link"
-              routerLink="sales-report"
+              routerLink="orders"
               aria-expanded="false"
               routerLinkActive="active"
             >
               <span>
-                <i class="lni lni-files"></i>
+                <i class="lni lni-cart-full"></i>
               </span>
-              <span class="hide-menu">Product Report</span>
+              <span class="hide-menu">Orders</span>
             </a>
-          </li> -->
+          </li>
+          <li class="nav-small-cap">
+            <i class="lni lni-grid-alt nav-small-cap-icon fs-4"></i>
+            <span class="hide-menu">Management</span>
+          </li>
+          <li class="sidebar-item">
+            <a
+              class="sidebar-link"
+              routerLink="all-inventory"
+              aria-expanded="false"
+              routerLinkActive="active"
+            >
+              <span>
+                <i class="lni lni-cart-full"></i>
+              </span>
+              <span class="hide-menu">Inventory Management
+              </span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a
+              class="sidebar-link"
+              routerLink="all-retailer"
+              aria-expanded="false"
+              routerLinkActive="active"
+            >
+              <span>
+                <i class="lni lni-users"></i>
+              </span>
+              <span class="hide-menu">Retailer Management
+              </span>
+            </a>
+          </li>
+          <li class="sidebar-item">
+            <a
+              class="sidebar-link"
+              routerLink="pricing-control"
+              aria-expanded="false"
+              routerLinkActive="active"
+            >
+              <span>
+                <i class="lni lni-wallet"></i>
+              </span>
+              <span class="hide-menu">Pricing Control
+              </span>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- End Sidebar navigation -->
