--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -49,7 +49,7 @@
           </div>
           <div class="col-md-4">
             <!-- <h5 class="card-title fw-semibold mb-4">Titles, text, and links</h5> -->
-            <div class="card">
+            <div class="card  border-left border-3" style=" border-left: 2px solid blue;">
               <div class="card-body">
                 <div class="row">
                   <div class="col-4">
