--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -48,6 +48,15 @@
               <!-- Add more categories as needed -->
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
           
         </ul>
         <div class="d-flex">
