--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,77 +1,4 @@
-<!-- Start Header -->
-<header>
-  <!-- NavBar Added -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" routerLink="home">
-        <img
-          src="assets/images/logos/logo.png"
-          alt="Stationery Shop Logo"
-          height="80"
-        />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Shop</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Categories
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#pens&pencils">Pens & Pencils</a></li>
-              <li><a class="dropdown-item" href="#notebooks">Notebooks</a></li>
-              <li><a class="dropdown-item" href="#">Stationery Sets</a></li>
-              <!-- Add more categories as needed -->
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          
-        </ul>
-        <div class="d-flex">
-            <a href="#" class="btn btn-outline-dark me-2"><i class="lni lni-cart"></i> Cart</a>
-            <a routerLink="/login" class="btn btn-dark">Retailer Portal</a>
-        </div>
-        
-      </div>
-    </div>
-  </nav>
-
-  
-</header>
-
-<!-- End Header -->
+<app-header/>
 
 <!-- Start Main -->
 <main>
