--- a/src/app/pages/upload-product/upload-product.component.html
+++ b/src/app/pages/upload-product/upload-product.component.html
@@ -1,6 +1,6 @@
 <div class="body-container">
   <div class="container-fluid">
-    <div class="card">
+    <div class="card" style="border-left: 3px solid blue;">
       <div class="card-body">
         <h5 class="card-title fw-semibold mb-4">Add Product</h5>
         <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
