--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -24,48 +24,25 @@
               <p class="text-center">Your Number One Supplier For Stationary</p>
               <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label"
-                    >Username</label
-                  >
-                  <input
-                  formControlName="email"
-                    type="email"
-                    class="form-control"
-                    id="exampleInputEmail1"
-                    aria-describedby="emailHelp"
-                  />
-                 
+                  <label for="exampleInputEmail1" class="form-label">Username</label>
+                  <input formControlName="username" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
                 </div>
                 <div class="mb-4">
-                  <label for="exampleInputPassword1" class="form-label"
-                    >Password</label
-                  >
-                  <input
-                  formControlName="password"
-                    type="password"
-                    class="form-control"
-                    id="exampleInputPassword1"
-                  />
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1" />
                 </div>
-
-                <button
-                type="submit" [disabled]="!loginForm.valid"
-                  class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2"
-                  >Sign In</button
-                >
+              
+                <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">Sign In</button>
+              
                 <div class="d-flex align-items-center justify-content-center">
                   <p class="fs-4 mb-0 fw-bold">New to Stationery Shop</p>
-                  <a class="text-primary fw-bold ms-2" routerLink="/register"
-                    >Create an account</a
-                  >
+                  <a class="text-primary fw-bold ms-2" routerLink="/register">Create an account</a>
                 </div>
-                <div class="d-flex lign-items-center justify-content-center">
-                  <a class="text-primary fw-bold ms-2" routerLink="/home"
-                  >Back to Shop</a
-                >
+                <div class="d-flex align-items-center justify-content-center">
+                  <a class="text-primary fw-bold ms-2" routerLink="/home">Back to Shop</a>
                 </div>
-                
               </form>
+              
             </div>
           </div>
         </div>
