--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-md-4">
             <!-- <h5 class="card-title fw-semibold mb-4">Titles, text, and links</h5> -->
-            <div class="card">
+            <div class="card border-left border-3 border-secondary">
               <div class="card-body">
                 <div class="row">
                   <div class="col-4">
@@ -19,7 +19,7 @@
                     <p class="card-text">
                       Report on Sales
                     </p>
-                    <a class="card-link" style="cursor: pointer;">Access Report</a>
+                    <a class="card-link" style="cursor: pointer;" routerLink="/admin/sales-report">Access Report</a>
                   </div>
                 </div>
               </div>
@@ -27,7 +27,7 @@
           </div>
           <div class="col-md-4">
             <!-- <h5 class="card-title fw-semibold mb-4">Titles, text, and links</h5> -->
-            <div class="card">
+            <div class="card border-left border-3 border-secondary">
               <div class="card-body">
                 <div class="row">
                   <div class="col-4">
@@ -41,7 +41,7 @@
                     <p class="card-text">
                       Sales Analytics
                     </p>
-                    <a class="card-link" style="cursor: pointer;">Access Chart</a>
+                    <a class="card-link" style="cursor: pointer;" routerLink="/admin/sales-chart">Access Chart</a>
                   </div>
                 </div>
               </div>
@@ -49,7 +49,7 @@
           </div>
           <div class="col-md-4">
             <!-- <h5 class="card-title fw-semibold mb-4">Titles, text, and links</h5> -->
-            <div class="card  border-left border-3" style=" border-left: 2px solid blue;">
+            <div class="card  border-left border-3 border-secondary" style=" border-left: 3px solid blue;">
               <div class="card-body">
                 <div class="row">
                   <div class="col-4">
@@ -63,7 +63,7 @@
                     <p class="card-text">
                       Report on Products
                     </p>
-                    <a class="card-link" style="cursor: pointer;">Access Report</a>
+                    <a class="card-link" style="cursor: pointer;" routerLink="/admin/products">Access Report</a>
                   </div>
                 </div>
               </div>
