--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -84,9 +84,9 @@
               routerLinkActive="active"
             >
               <span>
-                <i class="lni lni-credit-cards"></i>
+                <i class="lni lni-cart-full"></i>
               </span>
-              <span class="hide-menu">Set Prices</span>
+              <span class="hide-menu">Inventory Update</span>
             </a>
           </li>
           <li class="nav-small-cap">
@@ -136,7 +136,7 @@
               <span class="hide-menu">Sales Report</span>
             </a>
           </li>
-          <li class="sidebar-item">
+          <!-- <li class="sidebar-item">
             <a
               class="sidebar-link"
               routerLink="orders"
@@ -148,8 +148,8 @@
               </span>
               <span class="hide-menu">Orders</span>
             </a>
-          </li>
-          <li class="nav-small-cap">
+          </li> -->
+          <!-- <li class="nav-small-cap">
             <i class="lni lni-grid-alt nav-small-cap-icon fs-4"></i>
             <span class="hide-menu">Management</span>
           </li>
@@ -194,7 +194,7 @@
               <span class="hide-menu">Pricing Control
               </span>
             </a>
-          </li>
+          </li> -->
         </ul>
       </nav>
       <!-- End Sidebar navigation -->
