--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -25,7 +25,7 @@
                       <h6 class="fw-semibold mb-0">Stock Level</h6>
                     </th>
                     <th class="border-bottom-0">
-                      <h6 class="fw-semibold mb-0">SET Price</h6>
+                      <h6 class="fw-semibold mb-0">Cost Price</h6>
                     </th>
                     <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0">Selling Price Price</h6>
