--- a/src/app/pages/sales-chart/sales-chart.component.html
+++ b/src/app/pages/sales-chart/sales-chart.component.html
@@ -1,1 +1,20 @@
-<p>sales-chart works!</p>
+<div class="body-container">
+    <div class="container-fluid">
+      <div class="card">
+        
+        <apx-chart
+          [series]="chartOptions.series"
+          [chart]="chartOptions.chart"
+          [xaxis]="chartOptions.xaxis"
+          [stroke]="chartOptions.stroke"
+          [dataLabels]="chartOptions.dataLabels"
+          [yaxis]="chartOptions.yaxis"
+          [title]="chartOptions.title"
+          [subtitle]="chartOptions.subtitle"
+          [labels]="chartOptions.labels"
+          [legend]="chartOptions.legend"
+        ></apx-chart>
+      </div>
+    </div>
+  </div>
+  
