--- a/src/app/pages/set-prices/set-prices.component.html
+++ b/src/app/pages/set-prices/set-prices.component.html
@@ -1,68 +1,59 @@
 <div class="body-container">
-    <div class="container-fluid">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title fw-semibold mb-4">Set Prices</h5>
-          <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-            <div class="row">
-              <div class="col-md-5">
-                <div class="mb-3">
-                  <label for="productName" class="form-label">Product Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="productName"
-                    aria-describedby="productNameHelp"
-                  formControlName="productName"
-                  />
-                  <div id="productNameHelp" class="form-text">
-                    Enter the name of the product.
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-5">
-                <div class="mb-3">
-                  <label for="productPrice" class="form-label"
-                    >Product Price</label
-                  >
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="productPrice"
-                    aria-describedby="productPriceHelp"
-                    formControlName="productPrice"
-                  />
-                  <div id="productPriceHelp" class="form-text">
-                    Enter the price of the product.
-                  </div>
-                </div>
-              </div>
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title fw-semibold mb-4">Update Product Stock</h5>
+        <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+          <div class="col-md-5">
+            <div class="mb-3">
+              <label for="productId" class="form-label">Product Code</label>
+              <select
+                class="form-select"
+                id="productId"
+                formControlName="productCode"
+                (change)="onProductSelected($event)"
+
+              >
+                <option value="" disabled selected>Select Product Code</option>
+                <option
+                  *ngFor="let product of products"
+                  [value]="product.productCode"
+                >
+                  {{ product.productCode }} ,{{product.name}}
+                </option>
+              </select>
+              <div class="form-text">Select the product code</div>
             </div>
-            <div class="row">
-              
-              <div class="col-md-5">
-                <div class="mb-3">
-                  <label for="productQuantity" class="form-label"
-                    >Product ID</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="productQuantity"
-                    aria-describedby="productQuantityHelp"
-                    formControlName="productId"
-                  />
-                  <div id="productQuantityHelp" class="form-text">
-                    Enter the Identification Number of product
-                  </div>
-                </div>
-              </div>
+            <!-- <div *ngIf="selectedProduct" class="mb-3">
+              <label class="form-label">Product Name</label>
+              <input
+                type="text"
+                class="form-control"
+                value="{{ selectedProduct.productName }}"
+                disabled
+              />
+            </div> -->
+            <div class="mb-3">
+              <label for="productQuantity" class="form-label"
+                >Product Quantity</label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="productQuantity"
+                formControlName="productQuantity"
+              />
+              <div class="form-text">Enter the quantity of the product</div>
             </div>
-            
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
+            <button type="button" class="btn btn-primary" (click)="onSubmit()">
+              Submit
+            </button>
+          </div>
+          <div *ngIf="loading" class="loading-overlay">
+            <div class="loader"></div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
-  
+</div>
