--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -119,6 +119,19 @@
               <span class="hide-menu">Sales Chart</span>
             </a>
           </li>
+          <li class="sidebar-item">
+            <a
+              class="sidebar-link"
+              routerLink="orders"
+              aria-expanded="false"
+              routerLinkActive="active"
+            >
+              <span>
+                <i class="lni lni-bar-chart"></i>
+              </span>
+              <span class="hide-menu">Sales Analysis Chart</span>
+            </a>
+          </li>
           <li class="nav-small-cap">
             <i class="lni lni-grid-alt nav-small-cap-icon fs-4"></i>
             <span class="hide-menu">Reports</span>
